introduced kafka for schedules updated spring boot 3.3.7 to 3.4.2 New endpoint for effective task conf Sending scheduled tasks to kafka Lock heartbeat and release scheduled tasks from task executor Dataset configuration:   new optional column ordering   new constraints declaration Added jdbc demo task processor Added Spark demo task processor